tests/k8s_testcases/network-policy-checks-bad-path/spec_ingress_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-ingress-test-type
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
  # wrong type
  ingress:
     from:
        - namespaceSelector: { }
          podSelector: { }
